# playstore-scraper

./: Instructions.md  README.md
clinet/: README.md
clinet/data/: IDs.txt
clinet/src/: post-to-scrap.go
server/: .gitignore  README.md  playstore-scraper.cabal
server/src/: Scraper.hs  Server.hs  Types.hs  Workers.hs
test/: GooglePlay.html
