name:                playstore-scraper
version:             0.1.0.0
synopsis:            SimilarWeb exercise
description:         Please see README.md
homepage:            https://github.com/onporat/playstore-scraper#readme
license:             BSD3
license-file:        LICENSE
author:              Oded Porat
maintainer:          onporat@gmail.com
copyright:           2016 Oded Porat
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable playstore-scraper-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , containers
                     , lens
                     , pretty
                     , snap
                     , text
                     , transformers
                     , http-conduit
                     , html-conduit
                     , xml-conduit
                     , mtl
                     , time
                     , BoundedChan
                     , unix
  default-language:    Haskell2010

test-suite playstore-scraper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , playstore-scraper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/onporat/playstore-scraper
